<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/eventTeams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewEventTeams"
        app:layout_constraintEnd_toEndOf="@+id/textViewRegistered"
        app:layout_constraintStart_toStartOf="@+id/textViewRegistered"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistered"/>

    <TextView
        android:id="@+id/eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewEventName"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewEndDate"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511"/>

    <TextView
        android:id="@+id/textViewStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewStartDate"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="64dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-78dp"/>

    <TextView
        android:id="@+id/eventStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewEventStart"
        app:layout_constraintEnd_toEndOf="@+id/textViewStartDate"
        app:layout_constraintStart_toStartOf="@+id/textViewStartDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewStartDate"/>

    <TextView
        android:id="@+id/eventEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewEventEnd"
        app:layout_constraintEnd_toEndOf="@id/textViewEndDate"
        app:layout_constraintStart_toStartOf="@+id/textViewEndDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewEndDate"/>

    <TextView
        android:id="@+id/textViewRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewRegistered"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventName" />

</androidx.constraintlayout.widget.ConstraintLayout>