<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/matchLayoutView"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="19dp"
        android:background="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteX="0dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:max="1000"
        android:progressBackgroundTint="@color/cinnabar"
        android:progressBackgroundTintMode="add"
        android:progressTint="@color/cornflowerBlue"
        android:progressTintMode="add"
        android:scaleY="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matchLayoutView"/>

    <TextView
        android:id="@+id/blueAllianceMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewBlueAlliance"
        app:layout_constraintBottom_toTopOf="@+id/matchLayoutView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/redAllianceMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewRedAlliance"
        app:layout_constraintBottom_toTopOf="@+id/matchLayoutView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/red1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewRed1"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match" />

    <TextView
        android:id="@+id/blue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewBlue1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/matchLayoutView"/>

    <TextView
        android:id="@+id/match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewMatch"
        app:layout_constraintBottom_toTopOf="@+id/matchLayoutView"
        app:layout_constraintEnd_toStartOf="@+id/redAllianceMatch"
        app:layout_constraintStart_toEndOf="@+id/blueAllianceMatch"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewScore"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />


</androidx.constraintlayout.widget.ConstraintLayout>